Clearing correct time frame of shifts from scan_input, appending shifts in flagged_shifts
Code is working for clearing the shifts out of scan_input that match the time range of hd_export, code ignores other shifts in scan_input. Also appending shifts onto end of current existing data in flagged_shifts.

--- a/app/static/hd_shifts.css
+++ b/app/static/hd_shifts.css
@@ -45,12 +45,7 @@ body {
     max-width: 95%;
 }
 
-.body-staff {
-    margin: 20px auto;
-    max-width: 1200px;
-}
-
-.body-time-clock {
+.body-staff, .body-time-clock {
     margin: 20px auto;
     max-width: 900px;
 }
